# mcp-bitbucket

./: .dockerignore  .env.example  .env.project1.example  .env.project2.example  .gitignore  Dockerfile  README.md  docker-compose.project1.yml  docker-compose.project2.yml  docker-compose.yml  docker-mcp-wrapper.sh  pyproject.toml
memory-bank/: activeContext.md  productContext.md  techContext.md
src/: __init__.py  app.py  bitbucket_client.py  cli.py  config.py  server.py
