[project]
name = "mcp-bitbucket"
version = "0.1.0"
description = "Python MCP server for Bitbucket Cloud, mirroring the JS implementation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Nemanja Milenković" }
]
keywords = ["mcp", "bitbucket", "model context protocol", "anthropic", "stdio"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "structlog>=24.1.0"
]

[project.scripts]
"mcp-bitbucket" = "cli:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Install the contents of `src/` as top-level modules
force-include = { "src" = "." }


